--- a/src/components/ui/CartItem.css
+++ b/src/components/ui/CartItem.css
@@ -61,15 +61,54 @@
   transition: var(--transition);
 }
 
-.quantity-btn:hover {
+.quantity-btn:hover:not(:disabled) {
   background-color: var(--bg-tertiary);
   border-color: var(--primary-color);
+}
+
+.quantity-btn:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+  background-color: var(--bg-secondary);
 }
 
 .quantity-value {
   min-width: 30px;
   text-align: center;
   font-weight: 600;
+}
+
+.quantity-input {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 0.875rem;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  transition: var(--transition);
+  appearance: textfield;
+  -moz-appearance: textfield;
+  /* Firefox */
+}
+
+/* Remove spinner arrows for Chrome, Safari, Edge, Opera */
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.quantity-input:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  background-color: var(--bg-secondary);
+}
+
+.quantity-input:hover {
+  border-color: var(--primary-color);
 }
 
 .cart-item-total {
